--- a/requirements-teo.txt
+++ b/requirements-teo.txt
@@ -8,6 +8,7 @@ click==7.1.2
 configparser==5.0.2
 dj-database-url==0.5.0
 Django==3.2.3
+django-heroku==0.0.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 Flask==1.1.2
