--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-whitenoise==5.2.0
+asgiref==3.3.4
 dj-database-url==0.5.0
-Django==3.0.9
-gunicorn==20.0.4
-psycopg2==2.8.5
-pytz==2020.1
-djangorestframework==3.12.4
-djangorestframework-simplejwt==4.7.1
-dj-database-url==0.5.0
+Django==3.2.3
+django-cors-headers==3.7.0
+gunicorn==20.1.0
+psycopg2==2.8.6
+pynput==1.7.3
+pyobjc-core==7.1
+pyobjc-framework-Cocoa==7.1
+pyobjc-framework-Quartz==7.1
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
 whitenoise==5.2.0
-django-heroku==0.0.0
