--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ false/
 # myapp/__pycache__/admin.cpython-39.pyc
 # myproject/__pycache__/urls.cpython-39.pyc
 # myproject/__pycache__/settings.cpython-39.pyc
+requirements-teo.txt
